--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,228 @@
+body {
+    margin: 0;
+}
+
+p {
+    font: "Times New Roman";
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .calculator {
     width: 22.5rem;
     height: 33.75rem;
+    background-color: #000F1E;
 }
+
+.expression-container {
+    height: 20.25rem;
+}
+
+.buttons {
+    border-top: 0.2rem solid;
+    border-color: #205D9A;
+    height: 13.3rem;
+    position: relative;
+}
+
+.buttons > * {
+    position: absolute;
+    height: 3.325rem;
+    width: 2.5rem;
+}
+
+.clear {
+    height: 6.65rem;
+    top: 0;
+    left: 0;
+}
+
+.back {
+    height: 6.65rem;
+    top: 6.65rem;
+    left: 0;
+}
+
+.rad-deg {
+    top: 0;
+    left: 2.5rem;
+}
+
+.tan {
+    top: 3.325rem;
+    left: 2.5rem;
+}
+
+.cos {
+    top: 6.65rem;
+    left: 2.5rem;
+}
+
+.sin {
+    top: 9.975rem;
+    left: 2.5rem;
+}
+
+.pi {
+    top:0;
+    left: 5rem;
+}
+
+.e-exponent {
+    top: 3.325rem;
+    left: 5rem;
+}
+
+.ln {
+    top: 6.65rem;
+    left: 5rem;
+}
+
+.log10 {
+    top: 9.975rem;
+    left: 5rem;
+}
+
+.exponent {
+    top: 0rem;
+    left: 7.5rem;
+}
+
+.inverse {
+    top: 3.325rem;
+    left: 7.5rem;
+}
+
+.square {
+    top: 6.65rem;
+    left: 7.5rem;
+}
+
+.parantheses {
+    top: 9.975rem;
+    left: 7.5rem;
+}
+
+.seven {
+    top: 0;
+    left: 10rem;
+}
+
+.four {
+    top: 3.325rem;
+    left: 10rem;
+}
+
+.one {
+    top: 6.65rem;
+    left: 10rem;
+}
+
+.zero {
+    top: 9.975rem;
+    left: 10rem;
+}
+
+.eight {
+    top: 0;
+    left: 12.5rem;
+}
+
+.five {
+    top:3.325rem;
+    left: 12.5rem;
+}
+
+.two {
+    top: 6.65rem;
+    left: 12.5rem;
+}
+
+.decimal {
+    top: 9.975rem;
+    left: 12.5rem;
+}
+
+.nine {
+    top: 0;
+    left: 15rem;
+}
+
+.six {
+    top: 3.325rem;
+    left: 15rem;
+}
+
+.three {
+    top: 6.65rem;
+    left: 15rem;
+}
+
+.ans {
+    top: 9.975rem;
+    left: 15rem;
+}
+
+.divide {
+    top: 0;
+    left: 17.5rem;
+}
+
+.multiply {
+    top: 3.325rem;
+    left: 17.5rem;
+}
+
+.minus {
+    top: 6.65rem;
+    left: 17.5rem;
+}
+
+.plus {
+    top: 9.975rem;
+    left: 17.5rem;
+}
+
+.equal {
+    height: 13.3rem;
+    top: 0;
+    left: 20rem;
+}
+
+.buttons > * > * {
+    position: absolute;
+    border: 0.125rem solid #205D9A;
+    border-radius: 0.25rem;
+    color: #D6EAF0;
+    height: 2.775rem;
+    width: 1.95rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.number {
+    border: 0.125rem solid #D6EAF0;
+    background-color: #D6EAF0;
+    color: black;
+}
+
+.inv {
+    font-size: 0.8125rem;
+}
+
+.equal > * {
+    height: 12.75rem;
+}
+
+.back > * {
+    height: 6.1rem;
+}
+
+.clear > * {
+    height: 6.1rem;
+}
+
