--- a/styles.css
+++ b/styles.css
@@ -16,42 +16,54 @@ p {
     width: 22.5rem;
     height: 33.75rem;
     background-color: #000F1E;
+    display: flex;
+    flex-direction: column;
 }
 
 .expression-container {
     position: relative;
     height: 20.25rem;
+    overflow-y: auto;
+}
+
+.expressions {
+    position: absolute;
+    /* bottom: 0; */
+    top: 0;
+    width: 100%;
+    height: 3.325rem;
 }
 
 .expression {
-    position: absolute;
-    bottom: 0;
-    font: "Times New Roman";
-    border-top: 0.2rem solid;
-    border-color: #205D9A;
-    width: 100%;
-    height: 3.325rem;
-    color: #D6EAF0;
-}
-
-.wide {
-    width: 95%;
     margin: auto;
+    padding: 1rem;
+    color: #D6EAF0;
+    font: "Times New Roman";
     font-size: 1.25rem;
 }
 
 .problem {
-    padding: 0.8rem 0;
+    border-top: 0.2rem solid;
+    border-color: #205D9A;
+    padding: 0.8rem 0.4rem;
     text-align: left;
 }
+
+.calculation {
+    border-top: 0.2rem solid;
+    border-color: #205D9A;
+    text-align: right;
+}
+
+/* .wide {
+    width: 95%;
+    margin: auto;
+    font-size: 1.25rem;
+} */
 
 input {
    background-color: #000F1E;
    color: #D6EAF0;
-}
-
-.solution {
-    text-align: right;
 }
 
 .buttons {
