--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ p {
     background-color: #000F1E;
     display: flex;
     flex-direction: column;
+    border: 0.2rem #205D9A solid;
 }
 
 #clear-div {
